// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Assembler > should assemble example Add Two Numbers 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 5],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [208, 1, 3],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [160, 0, 1],
    "offset": 6,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 9,
  },
  {
    "buffer": Uint8Array [210, 128, 0],
    "offset": 11,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 14,
  },
]
`;

exports[`Assembler > should assemble example Binary Addition and Overflow 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 200],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [208, 1, 100],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [160, 0, 1],
    "offset": 8,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 11,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 13,
  },
]
`;

exports[`Assembler > should assemble example Binary Counter 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 0],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [164, 0],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [208, 1, 16],
    "offset": 7,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 10,
  },
  {
    "buffer": Uint8Array [192, 247],
    "offset": 12,
  },
  {
    "buffer": Uint8Array [165, 1],
    "offset": 64,
  },
  {
    "buffer": Uint8Array [194, 254],
    "offset": 66,
  },
  {
    "buffer": Uint8Array [203],
    "offset": 68,
  },
]
`;

exports[`Assembler > should assemble example Bit Masking 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 0],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [208, 1, 16],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 8,
  },
  {
    "buffer": Uint8Array [187, 0, 160],
    "offset": 10,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 13,
  },
  {
    "buffer": Uint8Array [208, 1, 16],
    "offset": 15,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 18,
  },
  {
    "buffer": Uint8Array [187, 0, 8],
    "offset": 20,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 23,
  },
  {
    "buffer": Uint8Array [208, 1, 16],
    "offset": 25,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 28,
  },
  {
    "buffer": Uint8Array [188, 0, 252],
    "offset": 30,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 33,
  },
  {
    "buffer": Uint8Array [208, 1, 16],
    "offset": 35,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 38,
  },
  {
    "buffer": Uint8Array [186, 0, 240],
    "offset": 40,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 43,
  },
  {
    "buffer": Uint8Array [208, 1, 16],
    "offset": 45,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 48,
  },
  {
    "buffer": Uint8Array [192, 206],
    "offset": 50,
  },
  {
    "buffer": Uint8Array [165, 1],
    "offset": 64,
  },
  {
    "buffer": Uint8Array [194, 254],
    "offset": 66,
  },
  {
    "buffer": Uint8Array [203],
    "offset": 68,
  },
]
`;

exports[`Assembler > should assemble example Check a Bit 1`] = `
[
  {
    "buffer": Uint8Array [240, 0],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [186, 0, 1],
    "offset": 2,
  },
  {
    "buffer": Uint8Array [193, 9],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [208, 0, 128],
    "offset": 7,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 10,
  },
  {
    "buffer": Uint8Array [192, 244],
    "offset": 12,
  },
  {
    "buffer": Uint8Array [208, 0, 32],
    "offset": 14,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 17,
  },
  {
    "buffer": Uint8Array [192, 237],
    "offset": 19,
  },
]
`;

exports[`Assembler > should assemble example Debug Me 1: Stuck Loop 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 0],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [208, 2, 5],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [160, 0, 2],
    "offset": 6,
  },
  {
    "buffer": Uint8Array [219, 2, 0],
    "offset": 9,
  },
  {
    "buffer": Uint8Array [194, 250],
    "offset": 12,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 14,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 16,
  },
]
`;

exports[`Assembler > should assemble example Debug Me 2: Wrong Answer 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 0],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [208, 1, 6],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [208, 2, 4],
    "offset": 6,
  },
  {
    "buffer": Uint8Array [160, 0, 2],
    "offset": 9,
  },
  {
    "buffer": Uint8Array [165, 2],
    "offset": 12,
  },
  {
    "buffer": Uint8Array [194, 251],
    "offset": 14,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 16,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 18,
  },
]
`;

exports[`Assembler > should assemble example Debug Me 3: Off by One 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 0],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [164, 0],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [219, 0, 5],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [193, 11],
    "offset": 8,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 10,
  },
  {
    "buffer": Uint8Array [208, 1, 16],
    "offset": 12,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 15,
  },
  {
    "buffer": Uint8Array [192, 242],
    "offset": 17,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 19,
  },
  {
    "buffer": Uint8Array [165, 1],
    "offset": 64,
  },
  {
    "buffer": Uint8Array [194, 254],
    "offset": 66,
  },
  {
    "buffer": Uint8Array [203],
    "offset": 68,
  },
]
`;

exports[`Assembler > should assemble example Find the Largest Number 1`] = `
[
  {
    "buffer": Uint8Array [192, 8],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [18],
    "offset": 2,
  },
  {
    "buffer": Uint8Array [71],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [42],
    "offset": 4,
  },
  {
    "buffer": Uint8Array [99],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [5],
    "offset": 6,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 7,
  },
  {
    "buffer": Uint8Array [208, 1, 2],
    "offset": 8,
  },
  {
    "buffer": Uint8Array [211, 0, 1],
    "offset": 11,
  },
  {
    "buffer": Uint8Array [164, 1],
    "offset": 14,
  },
  {
    "buffer": Uint8Array [211, 2, 1],
    "offset": 16,
  },
  {
    "buffer": Uint8Array [219, 2, 0],
    "offset": 19,
  },
  {
    "buffer": Uint8Array [193, 15],
    "offset": 22,
  },
  {
    "buffer": Uint8Array [218, 0, 2],
    "offset": 24,
  },
  {
    "buffer": Uint8Array [196, 243],
    "offset": 27,
  },
  {
    "buffer": Uint8Array [208, 0, 0],
    "offset": 29,
  },
  {
    "buffer": Uint8Array [160, 0, 2],
    "offset": 32,
  },
  {
    "buffer": Uint8Array [192, 235],
    "offset": 35,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 37,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 39,
  },
]
`;

exports[`Assembler > should assemble example Hardware Interrupts 1`] = `
[
  {
    "buffer": Uint8Array [192, 3],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [80],
    "offset": 2,
  },
  {
    "buffer": Uint8Array [252],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [208, 0, 48],
    "offset": 4,
  },
  {
    "buffer": Uint8Array [210, 192, 0],
    "offset": 7,
  },
  {
    "buffer": Uint8Array [164, 0],
    "offset": 10,
  },
  {
    "buffer": Uint8Array [192, 251],
    "offset": 12,
  },
  {
    "buffer": Uint8Array [208, 0, 48],
    "offset": 80,
  },
  {
    "buffer": Uint8Array [205],
    "offset": 83,
  },
]
`;

exports[`Assembler > should assemble example Keyboard Input 1`] = `
[
  {
    "buffer": Uint8Array [208, 1, 192],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [240, 0],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [219, 0, 13],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [193, 9],
    "offset": 8,
  },
  {
    "buffer": Uint8Array [212, 1, 0],
    "offset": 10,
  },
  {
    "buffer": Uint8Array [164, 1],
    "offset": 13,
  },
  {
    "buffer": Uint8Array [194, 244],
    "offset": 15,
  },
]
`;

exports[`Assembler > should assemble example Multiply by Repeated Addition 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 0],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [208, 1, 6],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [208, 2, 4],
    "offset": 6,
  },
  {
    "buffer": Uint8Array [160, 0, 1],
    "offset": 9,
  },
  {
    "buffer": Uint8Array [165, 2],
    "offset": 12,
  },
  {
    "buffer": Uint8Array [194, 251],
    "offset": 14,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 16,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 18,
  },
]
`;

exports[`Assembler > should assemble example Overflow 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 127],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [176, 0, 1],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [197, 8],
    "offset": 6,
  },
  {
    "buffer": Uint8Array [208, 0, 0],
    "offset": 8,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 11,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 13,
  },
  {
    "buffer": Uint8Array [208, 0, 252],
    "offset": 14,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 17,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 19,
  },
]
`;

exports[`Assembler > should assemble example Procedures 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 224],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [173, 0],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [208, 1, 1],
    "offset": 7,
  },
  {
    "buffer": Uint8Array [202, 48],
    "offset": 10,
  },
  {
    "buffer": Uint8Array [173, 0],
    "offset": 12,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 14,
  },
  {
    "buffer": Uint8Array [208, 1, 4],
    "offset": 16,
  },
  {
    "buffer": Uint8Array [202, 48],
    "offset": 19,
  },
  {
    "buffer": Uint8Array [173, 0],
    "offset": 21,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 23,
  },
  {
    "buffer": Uint8Array [208, 1, 8],
    "offset": 25,
  },
  {
    "buffer": Uint8Array [202, 48],
    "offset": 28,
  },
  {
    "buffer": Uint8Array [192, 229],
    "offset": 30,
  },
  {
    "buffer": Uint8Array [165, 1],
    "offset": 48,
  },
  {
    "buffer": Uint8Array [194, 254],
    "offset": 50,
  },
  {
    "buffer": Uint8Array [203],
    "offset": 52,
  },
]
`;

exports[`Assembler > should assemble example Reverse a String Using the Stack 1`] = `
[
  {
    "buffer": Uint8Array [192, 15],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [72, 101, 108, 108, 111, 32, 87, 111, 114, 108, 100, 33],
    "offset": 2,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 14,
  },
  {
    "buffer": Uint8Array [208, 1, 2],
    "offset": 15,
  },
  {
    "buffer": Uint8Array [211, 0, 1],
    "offset": 18,
  },
  {
    "buffer": Uint8Array [219, 0, 0],
    "offset": 21,
  },
  {
    "buffer": Uint8Array [193, 8],
    "offset": 24,
  },
  {
    "buffer": Uint8Array [224, 0],
    "offset": 26,
  },
  {
    "buffer": Uint8Array [164, 1],
    "offset": 28,
  },
  {
    "buffer": Uint8Array [192, 244],
    "offset": 30,
  },
  {
    "buffer": Uint8Array [208, 2, 192],
    "offset": 32,
  },
  {
    "buffer": Uint8Array [225, 0],
    "offset": 35,
  },
  {
    "buffer": Uint8Array [212, 2, 0],
    "offset": 37,
  },
  {
    "buffer": Uint8Array [164, 2],
    "offset": 40,
  },
  {
    "buffer": Uint8Array [165, 1],
    "offset": 42,
  },
  {
    "buffer": Uint8Array [219, 1, 2],
    "offset": 44,
  },
  {
    "buffer": Uint8Array [194, 244],
    "offset": 47,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 49,
  },
]
`;

exports[`Assembler > should assemble example Seven-segment Display 1`] = `
[
  {
    "buffer": Uint8Array [192, 13],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [250],
    "offset": 2,
  },
  {
    "buffer": Uint8Array [96],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [182],
    "offset": 4,
  },
  {
    "buffer": Uint8Array [158],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [78],
    "offset": 6,
  },
  {
    "buffer": Uint8Array [220],
    "offset": 7,
  },
  {
    "buffer": Uint8Array [252],
    "offset": 8,
  },
  {
    "buffer": Uint8Array [138],
    "offset": 9,
  },
  {
    "buffer": Uint8Array [254],
    "offset": 10,
  },
  {
    "buffer": Uint8Array [222],
    "offset": 11,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 12,
  },
  {
    "buffer": Uint8Array [208, 1, 2],
    "offset": 13,
  },
  {
    "buffer": Uint8Array [211, 0, 1],
    "offset": 16,
  },
  {
    "buffer": Uint8Array [241, 2],
    "offset": 19,
  },
  {
    "buffer": Uint8Array [164, 0],
    "offset": 21,
  },
  {
    "buffer": Uint8Array [255],
    "offset": 23,
  },
  {
    "buffer": Uint8Array [255],
    "offset": 24,
  },
  {
    "buffer": Uint8Array [255],
    "offset": 25,
  },
  {
    "buffer": Uint8Array [241, 2],
    "offset": 26,
  },
  {
    "buffer": Uint8Array [164, 1],
    "offset": 28,
  },
  {
    "buffer": Uint8Array [211, 0, 1],
    "offset": 30,
  },
  {
    "buffer": Uint8Array [219, 0, 0],
    "offset": 33,
  },
  {
    "buffer": Uint8Array [194, 239],
    "offset": 36,
  },
  {
    "buffer": Uint8Array [192, 231],
    "offset": 38,
  },
]
`;

exports[`Assembler > should assemble example Shifts: Multiply and Divide by Two 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 1],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [208, 1, 8],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 8,
  },
  {
    "buffer": Uint8Array [219, 0, 128],
    "offset": 10,
  },
  {
    "buffer": Uint8Array [193, 6],
    "offset": 13,
  },
  {
    "buffer": Uint8Array [156, 0],
    "offset": 15,
  },
  {
    "buffer": Uint8Array [192, 242],
    "offset": 17,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 19,
  },
  {
    "buffer": Uint8Array [208, 1, 8],
    "offset": 21,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 24,
  },
  {
    "buffer": Uint8Array [219, 0, 1],
    "offset": 26,
  },
  {
    "buffer": Uint8Array [193, 230],
    "offset": 29,
  },
  {
    "buffer": Uint8Array [157, 0],
    "offset": 31,
  },
  {
    "buffer": Uint8Array [192, 242],
    "offset": 33,
  },
  {
    "buffer": Uint8Array [165, 1],
    "offset": 64,
  },
  {
    "buffer": Uint8Array [194, 254],
    "offset": 66,
  },
  {
    "buffer": Uint8Array [203],
    "offset": 68,
  },
]
`;

exports[`Assembler > should assemble example Software Interrupts 1`] = `
[
  {
    "buffer": Uint8Array [192, 4],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [81],
    "offset": 2,
  },
  {
    "buffer": Uint8Array [113],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [204, 2],
    "offset": 4,
  },
  {
    "buffer": Uint8Array [204, 3],
    "offset": 6,
  },
  {
    "buffer": Uint8Array [192, 252],
    "offset": 8,
  },
  {
    "buffer": Uint8Array [224],
    "offset": 80,
  },
  {
    "buffer": Uint8Array [209, 0, 80],
    "offset": 81,
  },
  {
    "buffer": Uint8Array [173, 0],
    "offset": 84,
  },
  {
    "buffer": Uint8Array [210, 80, 0],
    "offset": 86,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 89,
  },
  {
    "buffer": Uint8Array [205],
    "offset": 91,
  },
  {
    "buffer": Uint8Array [254],
    "offset": 112,
  },
  {
    "buffer": Uint8Array [209, 0, 112],
    "offset": 113,
  },
  {
    "buffer": Uint8Array [173, 0],
    "offset": 116,
  },
  {
    "buffer": Uint8Array [186, 0, 254],
    "offset": 118,
  },
  {
    "buffer": Uint8Array [210, 112, 0],
    "offset": 121,
  },
  {
    "buffer": Uint8Array [241, 2],
    "offset": 124,
  },
  {
    "buffer": Uint8Array [205],
    "offset": 126,
  },
]
`;

exports[`Assembler > should assemble example Traffic Light Sequence 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 48],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [208, 1, 8],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 8,
  },
  {
    "buffer": Uint8Array [208, 0, 80],
    "offset": 10,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 13,
  },
  {
    "buffer": Uint8Array [208, 1, 2],
    "offset": 15,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 18,
  },
  {
    "buffer": Uint8Array [208, 0, 132],
    "offset": 20,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 23,
  },
  {
    "buffer": Uint8Array [208, 1, 8],
    "offset": 25,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 28,
  },
  {
    "buffer": Uint8Array [208, 0, 136],
    "offset": 30,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 33,
  },
  {
    "buffer": Uint8Array [208, 1, 2],
    "offset": 35,
  },
  {
    "buffer": Uint8Array [202, 64],
    "offset": 38,
  },
  {
    "buffer": Uint8Array [192, 216],
    "offset": 40,
  },
  {
    "buffer": Uint8Array [165, 1],
    "offset": 64,
  },
  {
    "buffer": Uint8Array [194, 254],
    "offset": 66,
  },
  {
    "buffer": Uint8Array [203],
    "offset": 68,
  },
]
`;

exports[`Assembler > should assemble example Traffic Lights 1`] = `
[
  {
    "buffer": Uint8Array [208, 0, 128],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [241, 1],
    "offset": 3,
  },
  {
    "buffer": Uint8Array [155, 0],
    "offset": 5,
  },
  {
    "buffer": Uint8Array [192, 252],
    "offset": 7,
  },
]
`;

exports[`Assembler > should assemble example Visual Display Unit 1`] = `
[
  {
    "buffer": Uint8Array [192, 15],
    "offset": 0,
  },
  {
    "buffer": Uint8Array [72, 101, 108, 108, 111, 32, 87, 111, 114, 108, 100, 33],
    "offset": 2,
  },
  {
    "buffer": Uint8Array [0],
    "offset": 14,
  },
  {
    "buffer": Uint8Array [208, 0, 192],
    "offset": 15,
  },
  {
    "buffer": Uint8Array [208, 1, 2],
    "offset": 18,
  },
  {
    "buffer": Uint8Array [211, 2, 1],
    "offset": 21,
  },
  {
    "buffer": Uint8Array [212, 0, 2],
    "offset": 24,
  },
  {
    "buffer": Uint8Array [164, 0],
    "offset": 27,
  },
  {
    "buffer": Uint8Array [164, 1],
    "offset": 29,
  },
  {
    "buffer": Uint8Array [211, 2, 1],
    "offset": 31,
  },
  {
    "buffer": Uint8Array [219, 2, 0],
    "offset": 34,
  },
  {
    "buffer": Uint8Array [194, 243],
    "offset": 37,
  },
]
`;
